app-ee85e06/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ee85e06
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app-ee85e06
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: app-ee85e06
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000  
        supplementalGroups: [2000]
        fsGroup: 2000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: httpbin
        image: bjd145.azurecr.io/httpdemo:latest
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false  
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "2"
          requests:
            memory: "64Mi"
            cpu: "0.25"
        volumeMounts:
        - mountPath: /usr/tmp
          name: tmp-volume
      volumes:
      - name: tmp-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: app-ee85e06-svc
spec:
  type: ClusterIP
  selector:
    app: app-ee85e06
  ports:
  - port: 80
    targetPort: 8080
